# PID-based-SCARA-Robot-Position-and-Velocity-Control-And-Manipulation

./: .gitignore  README.md
Resources/: Run Scripts.txt
Resources/Group Project 1/: RBE500-Gazebo.md
Resources/Robot Data/: DH_Param.m  Velocity_calculator.mlx
Submissions/Group Project 3/: Screem Record.webm  jacobian_derivation.asv  jacobian_derivation.m
install/: local_setup.sh  setup.sh
install/custom_interfaces/include/custom_interfaces/custom_interfaces/srv/: find_joint_states.hpp
install/custom_interfaces/include/custom_interfaces/custom_interfaces/srv/detail/: find_joint_states__builder.hpp  find_joint_states__functions.h  find_joint_states__struct.h
install/custom_interfaces/share/custom_interfaces/: package.bash  package.sh  package.xml  package.zsh
install/custom_interfaces/share/custom_interfaces/cmake/: ament_cmake_export_targets-extras.cmake
install/rrbot_description/share/rrbot_description/: local_setup.sh  package.bash  package.dsv  package.sh
install/rrbot_description/share/rrbot_description/gazebo/: rrbot.gazebo.xacro
install/rrbot_description/share/rrbot_description/ros2_control/: rrbot.ros2_control.xacro
install/rrbot_description/share/rrbot_description/urdf/: rrbot.urdf.xacro  rrbot_description.urdf.xacro
install/rrbot_gazebo/lib/rrbot_gazebo/: fkin_publisher  ikin_publisher  publisher  switch
install/rrbot_gazebo/share/ament_index/resource_index/package_run_dependencies/: rrbot_gazebo
install/rrbot_gazebo/share/ament_index/resource_index/parent_prefix_path/: rrbot_gazebo
install/rrbot_gazebo/share/rrbot_gazebo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rrbot_gazebo/share/rrbot_gazebo/cmake/: rrbot_gazeboConfig.cmake
install/rrbot_gazebo/share/rrbot_gazebo/launch/: rrbot_world.launch.py
install/rrbot_gazebo/share/rrbot_gazebo/worlds/: rrbot.world
log/: latest_build
src/custom_interfaces/: CMakeLists.txt
src/custom_interfaces/srv/: FindJointStates.srv  SetEndEffectorVelocity.srv  SetJointStates.srv  SetJointVelocity.srv
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/custom_interfaces/include/custom_interfaces/custom_interfaces/srv/detail/: find_joint_states__traits.hpp  find_joint_states__type_support.c  find_joint_states__type_support.h
src/install/custom_interfaces/local/lib/python3.10/dist-packages/custom_interfaces/srv/: _find_joint_states.py
src/install/custom_interfaces/share/custom_interfaces/: local_setup.sh  package.sh
src/install/custom_interfaces/share/custom_interfaces/srv/: FindJointStates_Response.msg
src/install/rrbot_description/share/rrbot_description/: local_setup.sh  package.ps1  package.sh  package.zsh
src/install/rrbot_description/share/rrbot_description/cmake/: rrbot_descriptionConfig.cmake
src/log/: latest_build
src/rrbot_simulation_files/rrbot_description/: CMakeLists.txt
src/rrbot_simulation_files/rrbot_description/gazebo/: rrbot.gazebo.xacro
src/rrbot_simulation_files/rrbot_description/ros2_control/: rrbot.ros2_control.xacro
src/rrbot_simulation_files/rrbot_description/urdf/: rrbot_description.urdf.xacro
src/rrbot_simulation_files/rrbot_gazebo/: CMakeLists.txt  package.xml
src/rrbot_simulation_files/rrbot_gazebo/config/: controllers.yaml  gazebo_controllers.yaml
src/rrbot_simulation_files/rrbot_gazebo/src/: .position_publisher.cpp.swp  controller_effort_switch.cpp  controller_switch.cpp  controller_velocity_switch.cpp  end_effector_velocity_controller.cpp  ikin_cli.cpp  joint_controller.cpp  joint_effort_controller.cpp  joint_state_publisher.cpp  position_publisher.cpp
